Address WCAG colour contrast issues
As progress towards #117, this commit changes the colours of some
actions on the PPD search form to improve WCAG compliance. In
particular, we adopt a style closer to the GovUK button styles.

--- a/app/assets/stylesheets/ppd.scss
+++ b/app/assets/stylesheets/ppd.scss
@@ -172,25 +172,6 @@
     border-radius: 3px;
   }
 
-  // buttons
-  a.btn.btn-primary, a.btn.btn-primary:hover, a.btn.btn-primary:visited, button.btn-primary {
-    background-color: $lr-headline;
-    color: white;
-    font-family: Arial, sans-serif;
-    border: 1px solid darken( $lr-headline, 5% );
-  }
-
-  a.btn.btn-default, a.btn.btn-default:hover, a.btn.btn-default:visited, button.btn-default {
-    background-color: #f0f0f0;
-    color: $lr-headline;
-    font-family: Arial, sans-serif;
-    border: 1px solid darken( $lr-headline, 5% );
-  }
-
-  a.action, a.action:hover, a.action:visited {
-    color: $lr-headline;
-  }
-
   .clear-selection a.btn {
     position: absolute;
     right: 5px;
